# mpt-finops-operations

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ;  Dockerfile  Makefile  README.md  docker-compose.yaml  env.example  hello.py  openapi.json  prod.Dockerfile  pyproject.toml  sonar-project.properties
.github/workflows/: pr-build-merge.yaml
app/: __init__.py  collections.py  conf.py  db.py  main.py  models.py  repositories.py
app/routers/: entitlements.py  organizations.py
migrations/: env.py
migrations/versions/: 092806354b57_add_entitlement_activated_at.py  7f131c1faf6c_add_organizations.py  90830ea1c796_add_entitlement_status.py  f7798efd5439_create_entitlements.py
scripts/: generate_openapi_json.py
tests/: conftest.py  test_api.py  test_entitlements_api.py  test_organizations_api.py  utils.py
